samples/_failures_safe/1761373122_404fbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3580e21c.c: In function ‘main’:
./samples/SAFE/__tmp_3580e21c.c:150:9: error: expected expression at end of input
  150 |         {4, 3, 3}, {5, 2,
      |         ^
./samples/SAFE/__tmp_3580e21c.c:150:9: error: expected declaration or statement at end of input
